--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -67,5 +67,5 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7
           network: host
           build-args:
-            VERSION: ${{ matrix.version }}
-            PGVERSION: ${{ matrix.pgversion }}
+            - VERSION="${{ matrix.version }}"
+            - PGVERSION="${{ matrix.pgversion }}"
