--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,41 +31,41 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@master
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker BuildX
-        uses: docker/setup-buildx-action@v2
-
-      - name: Docker login
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Docker meta first
-        id: first
-        uses: docker/metadata-action@v3
-        with:
-          images: |
-            ghcr.io/${{ github.repository }}/first
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
-
-      - name: Docker build & push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: ${{ steps.first.outputs.tags }}
-          labels: ${{ steps.first.outputs.labels }}
-          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7
-          network: host
-          build-args:
-            - VERSION="${{ matrix.version }}"
-            - PGVERSION="${{ matrix.pgversion }}"
+#       - name: Set up QEMU
+#         uses: docker/setup-qemu-action@v2
+# 
+#       - name: Set up Docker BuildX
+#         uses: docker/setup-buildx-action@v2
+# 
+#       - name: Docker login
+#         uses: docker/login-action@v1
+#         with:
+#           registry: ghcr.io
+#           username: ${{ github.actor }}
+#           password: ${{ secrets.GITHUB_TOKEN }}
+# 
+#       - name: Docker meta first
+#         id: first
+#         uses: docker/metadata-action@v3
+#         with:
+#           images: |
+#             ghcr.io/${{ github.repository }}/first
+#           tags: |
+#             type=ref,event=branch
+#             type=ref,event=pr
+#             type=semver,pattern={{version}}
+#             type=semver,pattern={{major}}.{{minor}}
+#             type=semver,pattern={{major}}
+#             type=sha
+# 
+#       - name: Docker build & push
+#         uses: docker/build-push-action@v3
+#         with:
+#           push: true
+#           tags: ${{ steps.first.outputs.tags }}
+#           labels: ${{ steps.first.outputs.labels }}
+#           platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7
+#           network: host
+#           build-args:
+#             - VERSION="${{ matrix.version }}"
+#             - PGVERSION="${{ matrix.pgversion }}"
