--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,14 +59,14 @@ jobs:
             type=semver,pattern={{major}}
             type=sha
 
-#       - name: Docker build & push
-#         uses: docker/build-push-action@v3
-#         with:
-#           push: true
-#           tags: ${{ steps.first.outputs.tags }}
-#           labels: ${{ steps.first.outputs.labels }}
-#           platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7
-#           network: host
-#           build-args:
-#             - VERSION="${{ matrix.version }}"
-#             - PGVERSION="${{ matrix.pgversion }}"
+      - name: Docker build & push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: ${{ steps.first.outputs.tags }}
+          labels: ${{ steps.first.outputs.labels }}
+          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7
+          network: host
+          build-args:
+            - PGVERSION=${{ matrix.pgversion }}
+            - VERSION=${{ matrix.version }}
