--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,30 +2,28 @@ on:
   push: {}
 
 jobs:
-  example_matrix:
+  build:
     strategy:
       matrix:
-        # os: [ubuntu-22.04, ubuntu-20.04]
         version:
           - v0.17.0
           - v0.16.0
-          - v0.15.0
-          - v0.14.0
-          - v0.13.0
-          - v0.12.0
-          - v0.11.0
-          - v0.10.0
-          - v0.9.0
-          - v0.8.0
+          # - v0.15.0
+          # - v0.14.0
+          # - v0.13.0
+          # - v0.12.0
+          # - v0.11.0
+          # - v0.10.0
+          # - v0.9.0
+          # - v0.8.0
         pgversion:
           - 15.1-bullseye
           - 14.6-bullseye
-          - 13.9-bullseye
-          - 12.13-bullseye
-          - 11.18-bullseye
-          - 10.23-bullseye
-          - 9.6-bullseye
-    # runs-on: ${{ matrix.os }}
+          # - 13.9-bullseye
+          # - 12.13-bullseye
+          # - 11.18-bullseye
+          # - 10.23-bullseye
+          # - 9.6-bullseye
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
