--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,12 +49,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}/${{ matrix.version }}
           tags: |
-            ${{ matrix.version }}-${{ matrix.pgversion }}
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+            ${{ matrix.pgversion }}
             type=sha
 
       - name: Docker build & push
