--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ jobs:
         version:
           - v0.17.0
           - v0.16.0
-          # - v0.15.0
+          - v0.15.0
           # - v0.14.0
           # - v0.13.0
           # - v0.12.0
@@ -19,11 +19,11 @@ jobs:
         pgversion:
           - 15.1-bullseye
           - 14.6-bullseye
-          # - 13.9-bullseye
-          # - 12.13-bullseye
-          # - 11.18-bullseye
-          # - 10.23-bullseye
-          # - 9.6-bullseye
+          - 13.9-bullseye
+          - 12.13-bullseye
+          - 11.18-bullseye
+          - 10.23-bullseye
+          - 9.6-bullseye
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
@@ -53,10 +53,15 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            ghcr.io/${{ github.repository }}/${{ matrix.version }}
+            ghcr.io/${{ github.repository }}/${{ matrix.version }}-${{ matrix.pgversion }}
           tags: |
-            ${{ matrix.pgversion }}
+            type=schedule,pattern={{date 'YYYYMMDD'}}
             type=sha
+          labels: |
+            maintainer=egeneralov
+            org.opencontainers.image.title=stolon
+            org.opencontainers.image.description=stolon ${{ matrix.version }} pg ${{ matrix.pgversion }}
+            org.opencontainers.image.vendor=egeneralov
 
       - name: Docker build & push
         uses: docker/build-push-action@v3
