--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,7 +69,7 @@ jobs:
           push: true
           tags: ${{ steps.first.outputs.tags }}
           labels: ${{ steps.first.outputs.labels }}
-          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           context: stolon
           network: host
           build-args: |
