--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,15 +15,15 @@ jobs:
           - v0.11.0
           - v0.10.0
           - v0.9.0
-          - v0.8.0
+          # - v0.8.0
         pgversion:
           - 15.1-bullseye
-          - 14.6-bullseye
-          - 13.9-bullseye
-          - 12.13-bullseye
-          - 11.18-bullseye
-          - 10.23-bullseye
-          - 9.6-bullseye
+          # - 14.6-bullseye
+          # - 13.9-bullseye
+          # - 12.13-bullseye
+          # - 11.18-bullseye
+          # - 10.23-bullseye
+          # - 9.6-bullseye
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
